# teamschatgrabber

./: .coverage  CLAUDE.md  LICENSE  QUICK_START.md  README.md  build.bat  build.sh  build_exe.py  main.py  pyproject.toml  requirements.txt
src/teamschatgrab/: __init__.py  __main__.py  api.py  app.py  auth.py  exe_builder.py  platform_detection.py  storage.py  ui.py
tests/: __init__.py
tests/architecture/: __init__.py  test_dependency_direction.py  test_exe_builder_architecture.py  test_interface_boundaries.py  test_separation_of_concerns.py  test_substitutability.py
tests/integration/: __init__.py  test_exe_build.py
tests/unit/: __init__.py  test_api.py  test_app.py  test_auth.py  test_exe_builder.py  test_main.py  test_platform_detection.py  test_storage.py  test_ui.py
