[tool.poetry]
name = "teamschatgrab"
version = "0.1.0"
description = "Download chat history from Microsoft Teams"
authors = ["emumford"]
readme = "README.md"
packages = [{include = "teamschatgrab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.30.0"
rich = "^13.3.5"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
platformdirs = "^3.5.1"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.1.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
types-requests = "^2.31.0"

[tool.poetry.scripts]
teamschatgrab = "teamschatgrab.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"